objects/ARCobjA1__c.object
<CustomObject>
    <fields>
        <fullName>ARCobjA1_desc__c</fullName>
        <label>ARCobjA1-desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ARCobjA1s</relationshipLabel>
        <relationshipName>ARCobjA1s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Book__c</fullName>
        <label>Book</label>
        <referenceTo>Book__c</referenceTo>
        <relationshipLabel>ARCobjA1s</relationshipLabel>
        <relationshipName>ARCobjA1s</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ExternalObj1__c</fullName>
        <label>ExternalObj1</label>
        <length>255</length>
        <referenceTo>ExternalObject__x</referenceTo>
        <relationshipLabel>ARCobjA1s</relationshipLabel>
        <relationshipName>ARCobjA1s</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <label>ARCobjA1</label>
    <nameField>
        <label>ARCobjA1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ARCobjA1s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>